Fixed issues with display
Fixed an issue where the map was not covering 100% screen size on tablet devices

--- a/webPages/styles.css
+++ b/webPages/styles.css
@@ -2,9 +2,11 @@
   margin: 0;
   padding: 0;
 }
+
 html {
   overflow: hidden;
 }
+
 main {
   z-index: 10;
   width: 100vw;
@@ -95,7 +97,7 @@ body {
 
 #mapholder {
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  height: 120vh;
+  width: 120vw;
   z-index: 0;
  }
